--- a/player.html
+++ b/player.html
@@ -18,13 +18,42 @@ height: 600px;
 padding-left: 300px;
 font-size: 30px;
 }
+#slide-out {
+  background-color: black;
+  border: 1px solid white;
+  border-bottom: 1px solid white;
+  color: white;
 
+}
+#top-nav { 
+ background-color: black;
+  }
+
+#ul {
+    border: 1px solid #555;
+}
+
+#li {
+    text-align: center;
+    border-bottom: 1px solid #555;
+}
+
+#li:last-child {
+    border-bottom: none;
+}
+Try it Yourself »
+
+
+
+#color-me{
+    color:blue;
+}
   </style>
   
 </head>
 <body>
 
-  <nav class="top-nav">
+  <nav class="top-nav" id="top-nav">
         <div class="container">
           <div class="nav-wrapper"><a class="page-title">Grid</a></div>
         </div>
@@ -34,14 +63,18 @@ font-size: 30px;
 
     </div>
  <ul id="slide-out" class="side-nav fixed">
-      <li><a href="file:///Users/Achkan/Desktop/parallax-template/teen.html">TEEN</a></li>
+      <li><a href="file:///Users/Achkan/Desktop/parallax-template/teen.html" class="color-me">TEEN</a></li>
       <li><a href="#!">MILF</a></li>
       <li><a href="#!">AMATEUR</a></li>
       <li><a href="#!">LESBIAN</a></li>
       <li><a href="#!">ANAL</a></li>
       <li><a href="#!">BIG TITS</a></li>
     </ul>
-  
+   </nav>
+        
+        
+
+    </div>
   
 <H1 class="header center pink-text text-pink accent-3"> <=====SELECT YOUR TAG</H1>
   <!--  Scripts-->
