--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       </div>
     </div>
-    <div class="parallax" ><img src="background1.png" alt="Unsplashed background img 1"></div>
+    </div>div class="parallax" ><img src="background1.png" alt="Unsplashed background img 1"
   </div>
 
 
